# mapix.io-api

./: Application.hs  Foundation.hs  Histogram.hs  Import.hs  Model.hs  ObjectIndex.hs  Settings.hs  devel.hs  images-api.cabal  mapix-api.cabal
Handler/: Config.hs  Error.hs  Object.hs  Search.hs  Tag.hs
Handler/Internal/: Form.hs  Json.hs  Listing.hs  Mashape.hs  Type.hs
Histogram/: Color.hs  Compare.hs  Compress.hs  Compute.hs  Config.hs  Serialize.hs  Type.hs
Import/: NoFoundation.hs
ObjectIndex/: Instance.hs  Manage.hs  Persistent.hs  Search.hs  Tag.hs  Type.hs
ObjectIndex/Persistent/: Image.hs  Manage.hs  Model.hs  Restore.hs
api/: Application.hs  Foundation.hs  Histogram.hs  ImageIndex.hs  Import.hs  Model.hs  Settings.hs  mapix-api.cabal
api/Algorithm/: Index.hs
api/Handler/: Config.hs  Error.hs  Field.hs  Image.hs  Json.hs  Object.hs  Search.hs  Tag.hs  Type.hs
api/Handler/Internal/: Form.hs  Json.hs  Listing.hs  Mashape.hs  Type.hs
api/Histogram/: Color.hs  Compare.hs  Compress.hs  Compute.hs  Config.hs  Json.hs  Serialize.hs  Type.hs
api/ImageIndex/: Config.hs  Instance.hs  Json.hs  Manage.hs  Persistent.hs  Search.hs  Tag.hs  Type.hs
api/ImageIndex/Histogram/: Color.hs  Compress.hs  Compute.hs  Config.hs  Serialize.hs
api/ImageIndex/Persistent/: Manage.hs  Model.hs  Restore.hs
api/Model/: Field.hs
api/ObjectIndex/: Manage.hs  Search.hs  Tag.hs
api/ObjectIndex/Persistent/: Manage.hs  Model.hs  Restore.hs
api/Util/: Histogram.hs  Hmac.hs  Mashape.hs
api/Util/Hmac/: Type.hs
api/bench/: Benchmark.hs
api/config/: routes  sqlite.yml
api/train/: BackgroudExtraction.hs  Train.hs
api/train/dollar_bill/: .directory
api/train/food/: .directory
api/train/hawksbill/: .directory
api/train/inline_skate/: .directory
api/train/red_busses/: .directory
config/: client_session_key.aes  routes  settings.yml  sqlite.yml
data/: .directory  Train.hs  source.txt  sources.txt
data/elephants/: .directory
data/in_flight_planes/: .directory
data/roses/: .directory
flickr/: FlickrCrawler.hs
templates/: homepage.hamlet
train/: BackgroudExtraction.hs  Train.hs
train/airport/: .directory
train/beach/: .directory
train/dinosaurs/: .directory
train/faces/: .directory
train/horses/: .directory
train/leopards_1/: .directory
train/leopards_2/: .directory
train/mountains/: .directory
train/rome/: .directory
