name:              image-api
version:           0.0.0
author:            Raphael Javaux <raphaeljavaux[at]gmail.com>
maintainer:        Raphael Javaux <raphaeljavaux[at]gmail.com>
synopsis:          Similar images search using histograms.
homepage:          https://bitbucket.org/RaphaelJ/images-api
category:          Machine Vision
stability:         Experimental
cabal-version:     >= 1.9.2
build-type:        Simple

library
    exposed-modules:    

    ghc-options:        -Wall -O2
    hs-source-dirs:     src/

    build-depends: base                         >= 4            && < 5
                 , friday

executable train
    main-is:            Train.hs
    ghc-options:        -Wall -O2 -rtsopts
    hs-source-dirs:     data/

    build-depends: base                         >= 4            && < 5
                 , directory                    >= 1.2          && < 2
                 , filepath                     >= 1.3          && < 2
                 , friday
