name:              images-api
version:           0.0.0
author:            Raphael Javaux <raphaeljavaux[at]gmail.com>
maintainer:        Raphael Javaux <raphaeljavaux[at]gmail.com>
synopsis:          Similar images search using histograms.
homepage:          https://bitbucket.org/RaphaelJ/images-api
category:          Machine Vision
stability:         Experimental
cabal-version:     >= 1.9.2
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules:    Application
                        Foundation
                        Import
                        Model
                        Settings
                        Settings.StaticFiles
                        Settings.Development
                        Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions:         TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2.4      && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 1.3        && < 1.4
                 , persistent-sqlite             >= 1.3        && < 1.4
                 , persistent-template           >= 1.3        && < 1.4
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.2        && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 2.0        && < 2.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.0        && < 2.1
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 2.0        && < 2.1
                 , data-default
                 , aeson
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.0
                 , wai-logger                    >= 2.0

executable images-api
    if flag(library-only)
        Buildable: False

    main-is:            main.hs
    ghc-options:        -threaded -O2
    hs-source-dirs:     app

    build-depends: base
                 , images-api
                 , yesod

executable      train
    main-is:            Train.hs
    ghc-options:        -Wall -O2 -rtsopts -threaded
    hs-source-dirs:     data

    build-depends: base                         >= 4            && < 5
                 , deepseq                      > 1.3           && < 2
                 , directory                    >= 1.2          && < 2
                 , filepath                     >= 1.3          && < 2
                 , friday
                 , parallel                     >= 3.2          && < 4

executable      loader-flickr
    main-is:            FlickrCrawler.hs
    ghc-options:        -Wall -O2 -rtsopts -threaded
    hs-source-dirs:     flickr

    build-depends: base                         >= 4            && < 5
                 , bytestring                   >= 0.10.0.2     && < 1
                 , containers                   >= 0.5          && < 1
                 , deepseq                      > 1.3           && < 2
                 , directory                    >= 1.2          && < 2
                 , filepath                     >= 1.3          && < 2
                 , flickr                       >= 0.3.3        && < 0.4
                 , friday
                 , http-conduit                 >= 2.0.0.2      && < 3
                 , images-api
                 , monad-logger                 >= 0.3.3.1      && < 0.4
                 , parallel                     >= 3.2          && < 4
                 , persistent                   >= 1.3          && < 1.4
                 , persistent-sqlite            >= 1.3          && < 1.4
                 , random                       >= 1.0.1.1      && < 2
                 , random-shuffle               >= 0.0.4        && < 0.1
                 , resourcet                    >= 0.4.10       && < 1
                 , text                         >= 0.11         && < 2
                 , transformers                 >= 0.3          && < 0.4
