name:                   mapix-api
version:                0.0.0
cabal-version:          >= 1.10
build-type:             Simple

Flag dev
    Description:        Turn on development settings, like auto-reload templates.
    Default:            False

Flag library-only
    Description:        Build for use with "yesod devel"
    Default:            False

library
    exposed-modules:    Application
                        Foundation
                        Handler.Config
                        Handler.Error
                        Handler.Object
                        Handler.Search
                        Handler.Tag
                        Handler.Internal.Form
                        Handler.Internal.Json
                        Handler.Internal.Listing
                        Handler.Internal.Type
                        Handler.Internal.Mashape
                        Histogram
                        Histogram.Color
                        Histogram.Compare
                        Histogram.Compress
                        Histogram.Compute
                        Histogram.Config
                        Histogram.Serialize
                        Histogram.Type
                        Import
                        Import.NoFoundation
                        ObjectIndex
                        ObjectIndex.Instance
                        ObjectIndex.Manage
                        ObjectIndex.Persistent
                        ObjectIndex.Persistent.Image
                        ObjectIndex.Persistent.Manage
                        ObjectIndex.Persistent.Model
                        ObjectIndex.Persistent.Restore
                        ObjectIndex.Search
                        ObjectIndex.Tag
                        ObjectIndex.Type
                        Settings

    if flag(dev) || flag(library-only)
        cpp-options:    -DDEVELOPMENT
        ghc-options:    -Wall -fwarn-tabs -O0
    else
        ghc-options:    -Wall -fwarn-tabs -O2

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        CPP
                        DeriveDataTypeable
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        NoImplicitPrelude
                        NoMonomorphismRestriction
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        UndecidableInstances
                        TemplateHaskell
                        TypeFamilies
                        TypeOperators
                        TupleSections
                        ViewPatterns

    build-depends:      base                        >= 4            && < 5
                      , bytestring                  >= 0.9          && < 0.11
                      , classy-prelude              >= 0.10.2
                      , classy-prelude-conduit      >= 0.10.2
                      , classy-prelude-yesod        >= 0.10.2
                      , conduit                     >= 1.0          && < 2.0
                      , data-default
                      , directory                   >= 1.1          && < 1.3
                      , fast-logger                 >= 2.2          && < 2.5
                      , http-conduit                >= 2.1          && < 2.2
                      , http-types                  >= 0.8.5        && < 0.9
                      , monad-control               >= 0.3          && < 1.1
                      , monad-logger                >= 0.3          && < 0.4
                      , parallel                    >= 3.2.0.4      && < 4.0
                      , persistent                  >= 2.0          && < 2.3
                      , persistent-sqlite           >= 2.1.1        && < 2.3
                      , persistent-template         >= 2.0          && < 2.3
                      , random                      >= 1.0.1.1      && < 2.0
                      , resourcet                   >= 1.1.2.2      && < 2.0
                      , safe
                      , template-haskell
                      , text                        >= 0.11         && < 2.0
                      , time                        >= 1.4.2        && < 2.0
                      , transformers                >= 0.4.1.0      && < 0.5
                      , unordered-containers        >= 0.2.5.0      && < 0.3
                      , vector                      >= 0.10.9.1     && < 1.0
                      , warp                        >= 3.0          && < 3.2
                      , wai-extra                   >= 3.0          && < 3.1
                      , wai-logger                  >= 2.2          && < 2.3
                      , yaml                        >= 0.8          && < 0.9
                      , yesod                       >= 1.4.1        && < 1.5
                      , yesod-core                  >= 1.4.6        && < 1.5
                      , yesod-form                  >= 1.4.0        && < 1.5

                      -- Project/Non-Yesod dependencies
                      , aeson                       >= 0.6          && < 0.10
                      , cereal                      >= 0.4.1.1      && < 0.5
                      , clientsession               >= 0.9.1.1      && < 0.10
                      , containers                  >= 0.5.5.1      && < 0.65
                      , conduit-extra               >= 1.1.0.4      && < 2.0
                      , digits                      >= 0.2          && < 0.3
                      , friday                      >= 0.2.1.0      && < 0.3
                      , friday-devil                >= 0.1.1.1      && < 0.2
                      , lens                        >= 4.12         && < 5.0
                      , parsec                      >= 3.1.5        && < 4.0
                      , SHA                         >= 1.6.1        && < 2.0
                      , stm                         >= 2.4.3        && < 3.0

executable         mapix-api
    if flag(library-only)
        Buildable: False

    default-language:   Haskell2010
    main-is:            main.hs
    hs-source-dirs:     app
    build-depends:      base
                      , mapix-api
                      , yesod

    ghc-options:        -Wall -O2 -rtsopts -threaded -with-rtsopts=-N

Flag train
    Description:   Compiles the executable used to calibrate the algorithm.
    Default:       False

Benchmark       benchmark
    type:               exitcode-stdio-1.0

    default-language:   Haskell2010
    main-is:            Benchmark.hs
    ghc-options:        -Wall -O2 -rtsopts -threaded -with-rtsopts=-N
    hs-source-dirs:     bench/

    build-depends:      base                    >= 4            && < 5
                      , criterion               >= 1.0          && < 2.0
                      , friday                  >= 0.2          && < 0.3
                      , mapix-api

executable      train
    if !flag(train)
        Buildable: False

    default-language:   Haskell2010
    main-is:            Train.hs
    ghc-options:        -Wall -O2 -rtsopts -threaded
    hs-source-dirs:     train

    build-depends:      base                    >= 4            && < 5
                      , deepseq                 >= 1.3          && < 2
                      , directory               >= 1.2          && < 2
                      , filepath                >= 1.3          && < 2
                      , friday                  >= 0.2          && < 0.3
                      , parallel                >= 3.2          && < 4
