name:              mapix-api
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Handler.Image
                     Handler.Search
                     Handler.Tag
                     ImageIndex.Histogram.Color
                     ImageIndex.Histogram.Compress
                     ImageIndex.Histogram.Serialize
                     ImageIndex.Json
                     ImageIndex.Manage
                     ImageIndex.Tag
                     ImageIndex.Type
                     Import
                     Model
                     Settings
                     Settings.Development
                     Util.Histogram
                     Util.Hmac
                     Util.Hmac.Type

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions:         BangPatterns
                        CPP
                        DeriveDataTypeable
                        OverloadedStrings
                        GADTs
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        GeneralizedNewtypeDeriving
                        QuasiQuotes
                        NoMonomorphismRestriction
                        NoImplicitPrelude
                        MultiParamTypeClasses
                        TemplateHaskell
                        TypeFamilies

    build-depends: base                         >= 4            && < 5
                 , aeson
                 , cereal                       >= 0.4.0.1      && < 0.5
                 , bytestring                   >= 0.9          && < 0.11
                 , conduit                      >= 1.0
                 , clientsession                >= 0.9.0.3      && < 0.10
                 , data-default
                 , digits                       >= 0.2          && < 0.3
                 , directory                    >= 1.1          && < 1.3
                 , fast-logger                  >= 2.1
                 , filepath                     >= 1.3.0.1      && < 2
                 , friday
                 , http-conduit                 >= 2.0          && < 2.1
                 , monad-control                >= 0.3          && < 0.4
                 , monad-logger                 >= 0.3
                 , persistent                   >= 1.3          && < 1.4
                 , persistent-sqlite            >= 1.3          && < 1.4
                 , persistent-template          >= 1.3          && < 1.4
                 , SHA                          >= 1.6.1        && < 2
                 , template-haskell
                 , text                         >= 0.11         && < 2
                 , vector                       >= 0.10.9.1     && < 1.0
                 , warp                         >= 2.0          && < 2.1
                 , wai-extra                    >= 2.0          && < 2.1
                 , wai-logger                   >= 2.0
                 , yaml                         >= 0.8          && < 0.9
                 , yesod                        >= 1.2          && < 1.3
                 , yesod-core                   >= 1.2          && < 1.3
                 , yesod-form                   >= 1.3          && < 1.4

executable         mapix-api
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , mapix-api
                     , yesod

    ghc-options:       -threaded -O2

executable      train
    main-is:            Train.hs
    ghc-options:        -Wall -O2 -rtsopts -threaded
    hs-source-dirs:     train

    build-depends: base                         >= 4            && < 5
                 , deepseq                      > 1.3           && < 2
                 , directory                    >= 1.2          && < 2
                 , filepath                     >= 1.3          && < 2
                 , friday
                 , parallel                     >= 3.2          && < 4
